# Boxless

./: .env.template  .gitignore  DEPLOYMENT.md  README.md  app.yaml  cloudbuild.yaml  docker-compose.yml  package.json  setup-gcloud.sh  setup-step1.sh  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
apps/backend/: .env.example  Dockerfile  README.md  background_sync.py  boxless.db  create_tables.py  credentials.json.example  crud.py  database.py  gmail_service.py  main.py  migrate.py  models.py  package.json  pyproject.toml  requirements.txt
apps/frontend/: Dockerfile  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.vue
apps/frontend/src/components/: GmailAuth.vue  TheWelcome.vue
